# cog-runtime

./: .envrc.recommended  .gitignore  .golangci.yml  ARCHITECTURE.md  README.md  TODO.md  go.mod  go.sum  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/cog/: main.go
cmd/cog-schema/: main.go
cmd/cog-server/: main.go
cmd/coggo-server/: main.go
cmd/server/: main.go
cmd/webhook/: main.go
cog-fixture/: cog.yaml  example_predictor.ts
deno-coglet/: README.md  coglet.ts  test_runner.sh
internal/config/: config.go
internal/logging/: logger.go
internal/loggingtest/: test_helper.go  test_helper_test.go
internal/runner/: isolation_test.go  manager.go  manager_test.go  path.go  path_test.go  runner.go  runner_test.go  types.go  (+1 more)
python/: README.md  pyproject.toml
python/cog/: __init__.py
python/cog/coder/: dataclass_coder.py  json_coder.py  pydantic_coder.py
python/cog/command/: __init__.py  call_graph.py  go_cog.py  openapi_schema.py
python/cog/internal/: adt.py  file_runner.py  inspector.py  openapi.json  runner.py  schemas.py  util.py
python/cog/server/http/: __main__.py
python/coglet/: __init__.py  __main__.py  adt.py  adt.pyi  api.py  api.pyi  asts.py  check.py  file_runner.py  inspector.py  normalizer.py  runner.py  schema.py  schemas.py  scope.py  util.py  util.pyi
python/coglet/_compat/: cog.py
python/coglet/_compat/cog/: __init__.py
python/tests/: test_bad_predictor.py  test_basemodel_inheritance.py  test_basemodel_pyodide.py  test_cases.py  test_errors.py  test_file_runner.py  test_file_runner_async.py  test_file_runner_iterator.py  test_input_function.py  test_input_functional.py  test_predictors.py  test_test_inputs.py  test_util.py  test_weights.py
python/tests/bad_inputs/: simple.py
python/tests/bad_predictors/: input_default_none.py  input_defaults_max_length.py  output_complex_types.py  output_list_field.py  output_name.py
python/tests/cases/: legacy_optional.py  repetition.py
python/tests/errors/: input_defaults_ge.py  input_defaults_le.py  input_defaults_min_length.py
python/tests/procedures/bar/: predict.py
python/tests/procedures/foo/: predict.py
python/tests/procedures/setuid/: predict.py
python/tests/runners/: __init__.py  async_cog.yaml  async_iterator.py  async_sleep.py  chat.py  coder.py  concat_iterator.py  custom_named_output.py  custom_output.py  dataclass.py  enums.py  input_bad_mutable_default.py  iterator.py  json_obj.py  list_custom_named_output.py  list_output_objects.py  logs.py  output.py  output_with_list_fields.py  path.py  path_input_https.py  setup_default_args.py  sleep.py  tqdm_out.py  typeddict_obj.py
python/tests/schemas/: choices.json  custom_named_output.json  custom_named_output.py  decorator.json  defaults.json  defaults_none.json  defaults_none.py  deprecated.json  descriptions.json  floats.json  floats.py  length.json  list_custom_named_output.json  list_custom_named_output.py  lists.json  lists.py  np_types.json  np_types.py  output.json  output_any.json  output_bool.json  output_concat_iter.json  output_float.json  output_int.json  output_iterator.json  output_list.py  output_list1.json  output_list_objects.json  output_object.json  output_object_with_lists.json  output_object_with_lists.py  output_path.json  output_pathlike.json  output_pathlike.py  output_secret.json  output_str.json  paths.json  paths.py  primitives.json  range.json  (+5 more)
script/: build.sh  check.sh  cog-procedure.sh  cog-server.sh  coggo.sh  cogpy.sh  format.sh  functions.sh  generate-stubs.sh  init.sh  lint.sh  schemas.sh  test-setuid-cleanup.sh  test-setuid.sh  test.sh
(+43 files in other folders)
